// Copyright 2016 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cpu_instructions;

import "cpu_instructions/proto/cpu_type.proto";

// Represents information about a CPU.
message CpuInfoProto {
  // The CPU types for which this CpuInfo is valid.
  repeated CpuTypeProto cpu_type = 1;

  // Architecture, e.g. "x86".
  string architecture = 2;

  // List of supported features. See InstructionProto.feature_name for the
  // syntax.
  repeated string features = 3;
}
